k8s/length-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: proxidize
  name: length-service
  labels:
    app: length-service
    component: length
    release: prometheus
spec:
  selector:
    app: length-service
    component: length
  ports:
    - name: http
      port: 8081
      targetPort: 8081
