k8s/length-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: length-network-policy
  namespace: proxidize
spec:
  podSelector:
    matchLabels:
      app: length-service
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 8081
